reload page after settings changed, add build script

--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
 
     "name": "Mail.Ru счетчик непрочитанных писем (BETA)",
     "short_name": "Mail.Ru favicon counter",
-    "version": "0.0.2",
-    "description": "отображает количество непрочитанных писем в почты mail.ru в фавиконке",
+    "version": "0.0.3",
+    "description": "отображает количество непрочитанных писем в почте mail.ru в фавиконке",
 
     "icons": {
         "16": "icon.png",
@@ -15,7 +15,8 @@
 
     "permissions": [
          "https://e.mail.ru/*",
-         "storage"
+         "storage",
+         "tabs"
     ],
     "content_scripts": [
         {
